# unified-query-engine-prototype

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
examples/: cross_source_queries.py
infrastructure/postgres/: init.sql
src/: __init__.py  connections.py  query_engine.py  setup_delta.py  setup_iceberg.py
