[project]
name = "unified-query-engine-prototype"
version = "0.1.0"
description = "Prototype for running DuckDB queries across multiple data sources (PostgreSQL, Iceberg)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.0",
    "pyiceberg[s3fs,pyarrow,sql-sqlite]>=0.9.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ipython>=8.0.0",
]
